==> divekarshubham/amazon-freertos/vendors/nordic/boards/nrf52840-dk/ports/ota_pal_for_aws/ota_pal.c <==
#include <stdio.h>
#include <stdlib.h>
#include "FreeRTOS.h"
#include "ota.h"
#include "ota_pal.h"
#include "ota_private.h"
#include "aws_ota_pal_settings.h"
#include "asn1utility.h"
#include "mbedtls/base64.h"
#include "nrf_mbr.h"
#include "nrf_sdm.h"
#include "nrf_nvmc.h"
#include "nrf_sdh_soc.h"
#include "nrf_crypto.h"
#include "event_groups.h"

OtaErr_t otaPal_CreateFileForRx( OtaFileContext_t * const C )
{
    ret_code_t xErrCode;

    C->pFile = prvNextFreeFileHandle;
    OtaErr_t xStatus = OTA_ERR_NONE;

    /* Check that the second bank size is big enough to contain the new firmware */
    if( C->fileSize > otapalSECOND_BANK_SIZE )
    {
        xStatus = OTA_ERR_OUT_OF_MEMORY;
    }

    if( xStatus == OTA_ERR_NONE )
    {
        /* Create the event group for flash events */
        xFlashEventGrp = xEventGroupCreate();

        if( xFlashEventGrp == NULL )
        {
            LogError( ( "No memory for creation of event group" ) );
            xStatus = OTA_ERR_OUT_OF_MEMORY;
        }
    }

    if( xStatus == OTA_ERR_NONE )
    {
        /* Erase the required memory */
        LogInfo( ( "Erasing the flash memory" ) );
        xStatus = prvErasePages( otapalSECOND_BANK_START, otapalSECOND_BANK_END );

        if( xStatus != OTA_ERR_NONE )
        {
            LogError( ( "Erasing the flash memory failed with error_code %d", xStatus ) );
        }
    }

    return xStatus;
}

OtaErr_t otaPal_Abort( OtaFileContext_t * const C )
{
    C->pFile = ( int32_t ) NULL;

    /* Delete the event group */
    if( xFlashEventGrp != NULL )
    {
        vEventGroupDelete( xFlashEventGrp );
        xFlashEventGrp = NULL;
    }

    return OTA_ERR_NONE;
}

int16_t otaPal_WriteBlock( OtaFileContext_t * const C,
                           uint32_t ulOffset,
                           uint8_t * const pacData,
                           uint32_t ulBlockSize )
{
    /* We assume that the flash is already erased by this address (it should be, as we erase it in the
     * otaPal_CreateFileForRx, but the second write to the same position can break this invariant.
     * Anyway, the OTA procedure must not try to write to the same addresses */
    ret_code_t xErrCode = prvWriteFlash( otapalSECOND_BANK_START + otapalDESCRIPTOR_SIZE + ulOffset, ulBlockSize, pacData );

    if( xErrCode == NRF_SUCCESS )
    {
        LogDebug( ( "Write %ul bytes from the %ul address", ulBlockSize, ulOffset ) );
        return ulBlockSize;
    }
    else
    {
        LogError( ( "Write %ul bytes from the %ul address failed with error code %d",
                    ulBlockSize, ulOffset, xErrCode ) );
        return -1;
    }
}

OtaErr_t otaPal_CloseFile( OtaFileContext_t * const C )
{
    OtaErr_t xError;
    ret_code_t xStatus;

    LogInfo( ( "Erasing the flash memory was successful" ) );

    /* Write the image descriptor */
    xStatus = prvPAL_WriteImageDescriptor( C );

    if( xStatus == NRF_SUCCESS )
    {
        /* Increment the file handler */
        prvNextFreeFileHandle += 1;

        xError = prvPAL_CheckFileSignature( C );
    }
    else
    {
        xError = OTA_ERR_SIGNATURE_CHECK_FAILED;
    }

    return xError;
}

static OtaErr_t prvPAL_CheckFileSignature( OtaFileContext_t * const C )
{
    nrf_crypto_hash_sha256_digest_t xHash;
    size_t ulHashLength = sizeof( xHash );
    ret_code_t xErrCode = NRF_SUCCESS;
    uint32_t ulCertificateSize = 0;
    uint8_t * pusCertificate = prvPAL_ReadAndAssumeCertificate( NULL, &ulCertificateSize );

    if( pusCertificate == NULL )
    {
        xErrCode = NRF_ERROR_INTERNAL;
    }

    if( xErrCode == NRF_SUCCESS )
    {
        prvComputeSHA256Hash( ( uint8_t * ) otapalSECOND_BANK_START + otapalDESCRIPTOR_SIZE, C->fileSize, &xHash, &ulHashLength );
        xErrCode = prvVerifySignature( ( uint8_t * ) &xHash, ulHashLength, C->pSignature->data, C->pSignature->size, pusCertificate, ulCertificateSize );
        vPortFree( pusCertificate );
    }

    if( xErrCode != NRF_SUCCESS )
    {
        LogError( ( "Signature check failed" ) );
        return OTA_ERR_SIGNATURE_CHECK_FAILED;
    }

    LogInfo( ( "Signature check passed" ) );
    return OTA_ERR_NONE;
}

static uint8_t * prvPAL_ReadAndAssumeCertificate( const uint8_t * const pucCertName,
                                                  uint32_t * const ulSignerCertSize )
{
    uint8_t * pucPublicKey;

    *ulSignerCertSize = sizeof( signingcredentialSIGNING_CERTIFICATE_PEM );
    /* Skip the "BEGIN CERTIFICATE" */
    uint8_t * pucCertBegin = strstr( signingcredentialSIGNING_CERTIFICATE_PEM, pcOTA_PAL_CERT_BEGIN );

    if( pucCertBegin == NULL )
    {
        return NULL;
    }

    pucCertBegin += sizeof( pcOTA_PAL_CERT_BEGIN );
    /* Skip the "END CERTIFICATE" */
    uint8_t * pucCertEnd = strstr( pucCertBegin, pcOTA_PAL_CERT_END );

    if( pucCertEnd == NULL )
    {
        return NULL;
    }

    uint8_t * pucDecodedCertificate;
    size_t ulDecodedCertificateSize;
    mbedtls_base64_decode( pucDecodedCertificate, 0, &ulDecodedCertificateSize, pucCertBegin, pucCertEnd - pucCertBegin );
    pucDecodedCertificate = ( char * ) pvPortMalloc( ulDecodedCertificateSize );

    if( pucDecodedCertificate == NULL )
    {
        return NULL;
    }

    mbedtls_base64_decode( pucDecodedCertificate, ulDecodedCertificateSize, &ulDecodedCertificateSize, pucCertBegin, pucCertEnd - pucCertBegin );
    /* Find the tag of the ECDSA public signature*/
    uint8_t * pucPublicKeyStart = pucDecodedCertificate;

    while( pucPublicKeyStart < pucDecodedCertificate + ulDecodedCertificateSize )
    {
        if( memcmp( pucPublicKeyStart, pcOTA_PAL_ASN_1_ECDSA_TAG, sizeof( pcOTA_PAL_ASN_1_ECDSA_TAG ) - 1 ) == 0 )
        {
            break;
        }

        pucPublicKeyStart++;
    }

    if( pucPublicKeyStart == pucPublicKeyStart + ulDecodedCertificateSize )
    {
        vPortFree( pucDecodedCertificate );
        return NULL;
    }

    pucPublicKeyStart -= 4;
    *ulSignerCertSize = pucPublicKeyStart[ 1 ] + 2;
    vPortFree( pucDecodedCertificate );
    pucPublicKey = pvPortMalloc( *ulSignerCertSize );

    if( pucPublicKey != NULL )
    {
        memcpy( pucPublicKey, pucPublicKeyStart, *ulSignerCertSize );
    }

    return pucPublicKey;
}

OtaErr_t otaPal_ResetDevice( OtaFileContext_t * const C )
{
    ( void ) C;

    NVIC_SystemReset();
    return OTA_ERR_RESET_NOT_SUPPORTED;
}

OtaErr_t otaPal_SetPlatformImageState( OtaFileContext_t * const C,
                                       OtaImageState_t eState )
{
    OtaErr_t xStatus = OTA_ERR_NONE;

    ( void ) C;

    if( xFlashEventGrp == NULL )
    {
        /* Create the event group for flash events */
        xFlashEventGrp = xEventGroupCreate();

        if( xFlashEventGrp == NULL )
        {
            LogError( ( "No memory for creation of event group" ) );
            xStatus = OTA_ERR_OUT_OF_MEMORY;
        }
    }

    /* Read the old image */
    /* Right now we always boot from the first bank */
    /* TODO: Support boot from the second bank */
    ImageDescriptor_t * old_descriptor = ( ImageDescriptor_t * ) ( otapalFIRST_BANK_START );
    ImageDescriptor_t new_descriptor;

    /* Check if the correct image is located at the beginning of the bank */
    if( ( memcmp( old_descriptor->pMagick, pcOTA_PAL_Magick, otapalMAGICK_SIZE ) != 0 ) && ( eState == OtaImageStateAccepted ) )
    {
        xStatus = OTA_ERR_COMMIT_FAILED;
    }

    if( xStatus == OTA_ERR_NONE )
    {
        memcpy( &new_descriptor, old_descriptor, sizeof( new_descriptor ) );

        switch( eState )
        {
            case OtaImageStateAccepted:

                if( old_descriptor->usImageFlags == otapalIMAGE_FLAG_COMMIT_PENDING )
                {
                    new_descriptor.usImageFlags = otapalIMAGE_FLAG_VALID;
                }
                else
                {
                    new_descriptor.usImageFlags = otapalIMAGE_FLAG_INVALID;
                }

                break;

            case OtaImageStateRejected:
            case OtaImageStateAborted:

                if( old_descriptor->usImageFlags == otapalIMAGE_FLAG_COMMIT_PENDING )
                {
                    new_descriptor.usImageFlags = otapalIMAGE_FLAG_INVALID;
                }

                break;

            case OtaImageStateTesting:
                break;

            default:
                xStatus = OTA_ERR_BAD_IMAGE_STATE;
                break;
        }
    }

    if( xStatus == OTA_ERR_NONE )
    {
        /* We don't wont to do anything with flash if it would leave it in the same state as it were */
        if( ( new_descriptor.usImageFlags != old_descriptor->usImageFlags ) && ( eState != OtaImageStateTesting ) )
        {
            xStatus = prvErasePages( otapalFIRST_BANK_START, otapalFIRST_BANK_START + otapalDESCRIPTOR_SIZE );

            if( xStatus == OTA_ERR_NONE )
            {
                xStatus = prvWriteFlash( otapalFIRST_BANK_START, sizeof( new_descriptor ), ( uint8_t * ) &new_descriptor );
            }
        }
    }

    return xStatus;
}

OtaPalImageState_t otaPal_GetPlatformImageState( OtaFileContext_t * const C )
{
    OtaPalImageState_t xImageState = OtaPalImageStateInvalid;

    ImageDescriptor_t * descriptor = ( ImageDescriptor_t * ) ( otapalFIRST_BANK_START );

    ( void ) C;

    switch( descriptor->usImageFlags )
    {
        case otapalIMAGE_FLAG_COMMIT_PENDING:
            xImageState = OtaPalImageStatePendingCommit;
            break;

        case otapalIMAGE_FLAG_VALID:
            xImageState = OtaPalImageStateValid;
            break;

        case otapalIMAGE_FLAG_INVALID:
            xImageState = OtaPalImageStateInvalid;
            break;
    }

    return xImageState;
}
