==> divekarshubham/amazon-freertos/vendors/renesas/boards/rx65n-rsk/ports/ota_pal_for_aws/ota_pal.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "FreeRTOS.h"
#include "ota.h"
#include "ota_pal.h"
#include "iot_crypto.h"
#include "core_pkcs11.h"
    #include "ota_config.h"
#include "ota_config_defaults.h"
#include "platform.h"
#include "r_flash_rx_if.h"
    #define BOOT_LOADER_LOW_ADDRESS                           FLASH_CF_BLOCK_13
    #define BOOT_LOADER_MIRROR_LOW_ADDRESS                    FLASH_CF_BLOCK_51
    #define BOOT_LOADER_MIRROR_HIGH_ADDRESS                   FLASH_CF_BLOCK_38
    #define BOOT_LOADER_UPDATE_TEMPORARY_AREA_HIGH_ADDRESS    FLASH_CF_BLOCK_52
    #define BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_SMALL            8
    #define BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_MEDIUM           6
    #define FLASH_INTERRUPT_PRIORITY                          configMAX_SYSCALL_INTERRUPT_PRIORITY /* 0(low) - 15(high) */
    #define BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS     ( uint32_t ) FLASH_CF_LO_BANK_LO_ADDR
    #define BOOT_LOADER_UPDATE_EXECUTE_AREA_LOW_ADDRESS       ( uint32_t ) FLASH_CF_HI_BANK_LO_ADDR
    #define BOOT_LOADER_UPDATE_TARGET_BLOCK_NUMBER            ( uint32_t ) ( FLASH_NUM_BLOCKS_CF - BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_SMALL - BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_MEDIUM )
    #define DUMMY                                             0
    #define BOOT_LOADER_LOW_ADDRESS                           DUMMY
    #define BOOT_LOADER_MIRROR_LOW_ADDRESS                    DUMMY
    #define BOOT_LOADER_MIRROR_HIGH_ADDRESS                   DUMMY

OtaErr_t otaPal_CreateFileForRx( OtaFileContext_t * const C )
{
    LogDebug( ( "otaPal_CreateFileForRx is called." ) );
    LogDebug( ( "Compiled in [%s] [%s].", __DATE__, __TIME__ ) );
    OtaErr_t eResult = OTA_ERR_UNINITIALIZED;
    flash_interrupt_config_t cb_func_info;

    if( C != NULL )
    {
        if( C->pFilePath != NULL )
        {
            /* create task/queue/semaphore for flashing */
            xQueue = xQueueCreate( otaconfigMAX_NUM_BLOCKS_REQUEST, sizeof( PACKET_BLOCK_FOR_QUEUE ) );
            xTaskCreate( ota_flashing_task, "OTA_FLASHING_TASK", configMINIMAL_STACK_SIZE, NULL, configMAX_PRIORITIES, &xTask );
            xSemaphoreFlashig = xSemaphoreCreateBinary();
            xSemaphoreGive( xSemaphoreFlashig );
            xSemaphoreWriteBlock = xSemaphoreCreateMutex();
            xSemaphoreGive( xSemaphoreWriteBlock );
            fragmented_flash_block_list = NULL;

            R_FLASH_Close();

            if( R_FLASH_Open() == FLASH_SUCCESS )
            {
                cb_func_info.pcallback = ota_header_flashing_callback;
                cb_func_info.int_priority = FLASH_INTERRUPT_PRIORITY;
                R_FLASH_Control( FLASH_CMD_SET_BGO_CALLBACK, ( void * ) &cb_func_info );
                gs_header_flashing_task = OTA_FLASHING_IN_PROGRESS;

                if( R_FLASH_Erase( ( flash_block_address_t ) BOOT_LOADER_UPDATE_TEMPORARY_AREA_HIGH_ADDRESS, BOOT_LOADER_UPDATE_TARGET_BLOCK_NUMBER ) != FLASH_SUCCESS )
                {
                    eResult = OTA_ERR_RX_FILE_CREATE_FAILED;
                    LogError( ( "R_FLASH_Erase() returns error." ) );
                }

                while( OTA_FLASHING_IN_PROGRESS == gs_header_flashing_task )
                {
                }

                R_FLASH_Close();
                R_FLASH_Open();
                cb_func_info.pcallback = ota_flashing_callback;
                cb_func_info.int_priority = FLASH_INTERRUPT_PRIORITY;
                R_FLASH_Control( FLASH_CMD_SET_BGO_CALLBACK, ( void * ) &cb_func_info );
                load_firmware_control_block.OTA_FileContext = C;
                load_firmware_control_block.total_image_length = 0;
                load_firmware_control_block.eSavedAgentState = OtaImageStateUnknown;
                LogInfo( ( "Receive file created." ) );
                C->pFile = ( uint8_t * ) &load_firmware_control_block;
                eResult = OTA_ERR_NONE;
            }
            else
            {
                eResult = OTA_ERR_RX_FILE_CREATE_FAILED;
                LogError( ( "R_FLASH_Open() returns error." ) );
            }
        }
        else
        {
            eResult = OTA_ERR_RX_FILE_CREATE_FAILED;
            LogError( ( "Invalid context provided." ) );
        }
    }
    else
    {
        eResult = OTA_ERR_RX_FILE_CREATE_FAILED;
        LogError( ( "Invalid context provided." ) );
    }

    return eResult;
}

OtaErr_t otaPal_Abort( OtaFileContext_t * const C )
{
    LogDebug( ( "otaPal_Abort is called." ) );

    OtaErr_t eResult = OTA_ERR_NONE;

    if( ota_context_validate( C ) == R_OTA_ERR_INVALID_CONTEXT )
    {
        eResult = OTA_ERR_FILE_CLOSE;
    }

    if( OTA_ERR_NONE == eResult )
    {
        /* delete task/queue for flashing */
        if( NULL != xTask )
        {
            vTaskDelete( xTask );
            xTask = NULL;
        }

        if( NULL != xQueue )
        {
            vQueueDelete( xQueue );
            xQueue = NULL;
        }

        if( NULL != xSemaphoreFlashig )
        {
            vSemaphoreDelete( xSemaphoreFlashig );
            xSemaphoreFlashig = NULL;
        }

        if( NULL != xSemaphoreWriteBlock )
        {
            vSemaphoreDelete( xSemaphoreWriteBlock );
            xSemaphoreWriteBlock = NULL;
        }

        R_FLASH_Close();
    }

    ota_context_close( C );
    return eResult;
}

int16_t otaPal_WriteBlock( OtaFileContext_t * const C,
                           uint32_t ulOffset,
                           uint8_t * const pacData,
                           uint32_t ulBlockSize )
{
    int16_t sNumBytesWritten = R_OTA_ERR_QUEUE_SEND_FAIL;
    FLASH_BLOCK flash_block;
    static uint8_t flash_block_array[ FLASH_CF_MIN_PGM_SIZE ];
    uint8_t * packet_buffer;

    LogDebug( ( "otaPal_WriteBlock is called." ) );

    xSemaphoreTake( xSemaphoreWriteBlock, portMAX_DELAY );

    if( ( !( ulOffset % FLASH_CF_MIN_PGM_SIZE ) ) && ( !( ulBlockSize % FLASH_CF_MIN_PGM_SIZE ) ) )
    {
        packet_buffer = pvPortMalloc( ulBlockSize );
        memcpy( packet_buffer, pacData, ulBlockSize );
        packet_block_for_queue1.p_packet = packet_buffer;
        packet_block_for_queue1.ulOffset = ulOffset;
        packet_block_for_queue1.length = ulBlockSize;

        if( xQueueSend( xQueue, &packet_block_for_queue1, NULL ) == pdPASS )
        {
            sNumBytesWritten = ( int16_t ) ulBlockSize;
        }
        else
        {
            vPortFree( packet_block_for_queue1.p_packet );
            LogError( ( "OTA flashing queue send error." ) );
            sNumBytesWritten = R_OTA_ERR_QUEUE_SEND_FAIL;
        }
    }
    else
    {
        flash_block.binary = flash_block_array;

        fragmented_flash_block_list = fragmented_flash_block_list_insert( fragmented_flash_block_list, ulOffset, pacData, ulBlockSize );

        if( fragmented_flash_block_list != NULL )
        {
            while( 1 )
            {
                fragmented_flash_block_list = fragmented_flash_block_list_assemble( fragmented_flash_block_list, &flash_block );

                if( flash_block.binary != NULL )
                {
                    packet_buffer = pvPortMalloc( flash_block.length );
                    memcpy( packet_buffer, flash_block.binary, flash_block.length );
                    packet_block_for_queue1.p_packet = packet_buffer;
                    packet_block_for_queue1.ulOffset = flash_block.offset;
                    packet_block_for_queue1.length = flash_block.length;

                    if( xQueueSend( xQueue, &packet_block_for_queue1, NULL ) != pdPASS )
                    {
                        vPortFree( packet_block_for_queue1.p_packet );
                        LogError( ( "OTA flashing queue send error." ) );
                        sNumBytesWritten = R_OTA_ERR_QUEUE_SEND_FAIL;
                        break;
                    }
                }
                else
                {
                    sNumBytesWritten = ( int16_t ) ulBlockSize;
                    break;
                }
            }

            /*----------- finalize phase ----------*/
            fragmented_flash_block_list_print( fragmented_flash_block_list );
        }
        else
        {
            sNumBytesWritten = ( int16_t ) ulBlockSize;
        }
    }

    xSemaphoreGive( xSemaphoreWriteBlock );

    return sNumBytesWritten;
}

OtaErr_t otaPal_CloseFile( OtaFileContext_t * const C )
{
    OtaErr_t eResult = OTA_ERR_NONE;

    if( ota_context_validate( C ) == R_OTA_ERR_INVALID_CONTEXT )
    {
        eResult = OTA_ERR_FILE_CLOSE;
    }

    if( C->pSignature != NULL )
    {
        eResult = prvPAL_CheckFileSignature( C );
    }
    else
    {
        eResult = OTA_ERR_SIGNATURE_CHECK_FAILED;
    }

    if( OTA_ERR_NONE == eResult )
    {
        /* Update the user firmware header. */
        if( ota_context_update_user_firmware_header( C ) == R_OTA_ERR_NONE )
        {
            LogDebug( ( "User firmware header updated." ) );
        }
        else
        {
            LogError( ( "Failed to update the image header." ) );
            eResult = OTA_ERR_FILE_CLOSE;
        }

        /* delete task/queue for flashing */
        if( NULL != xTask )
        {
            vTaskDelete( xTask );
            xTask = NULL;
        }

        if( NULL != xQueue )
        {
            do
            {
                if( errQUEUE_FULL == xQueueReceive( xQueue, &packet_block_for_queue2, 0 ) )
                {
                    break;
                }
                else
                {
                    vPortFree( packet_block_for_queue2.p_packet );
                }
            }
            while( 1 );

            vQueueDelete( xQueue );
            xQueue = NULL;
        }

        if( NULL != xSemaphoreFlashig )
        {
            vSemaphoreDelete( xSemaphoreFlashig );
            xSemaphoreFlashig = NULL;
        }

        if( NULL != xSemaphoreWriteBlock )
        {
            vSemaphoreDelete( xSemaphoreWriteBlock );
            xSemaphoreWriteBlock = NULL;
        }

        R_FLASH_Close();
    }
    else
    {
        load_firmware_control_block.eSavedAgentState = OtaImageStateRejected;
    }

    ota_context_close( C );
    return eResult;
}

static OtaErr_t prvPAL_CheckFileSignature( OtaFileContext_t * const C )
{
    OtaErr_t eResult;
    uint32_t ulSignerCertSize;
    void * pvSigVerifyContext;
    uint8_t * pucSignerCert = NULL;
    uint32_t flash_aligned_address = 0;
    uint8_t assembled_flash_buffer[ FLASH_CF_MIN_PGM_SIZE ];
    flash_err_t flash_err;
    flash_interrupt_config_t cb_func_info;

    if( fragmented_flash_block_list != NULL )
    {
        FRAGMENTED_FLASH_BLOCK_LIST * tmp = fragmented_flash_block_list;

        do
        {
            /* Read one page from flash memory. */
            flash_aligned_address = ( ( tmp->content.offset & OTA_FLASH_MIN_PGM_SIZE_MASK ) + BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS + BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH );
            memcpy( ( uint8_t * ) assembled_flash_buffer, ( uint8_t * ) flash_aligned_address, FLASH_CF_MIN_PGM_SIZE );
            /* Replace length bytes from offset. */
            memcpy( &assembled_flash_buffer[ tmp->content.offset ], tmp->content.binary, tmp->content.length );
            /* Flashing memory. */
            xSemaphoreTake( xSemaphoreFlashig, portMAX_DELAY );
            R_FLASH_Close();
            R_FLASH_Open();
            cb_func_info.pcallback = ota_header_flashing_callback;
            cb_func_info.int_priority = FLASH_INTERRUPT_PRIORITY;
            R_FLASH_Control( FLASH_CMD_SET_BGO_CALLBACK, ( void * ) &cb_func_info );
            gs_header_flashing_task = OTA_FLASHING_IN_PROGRESS;
            flash_err = R_FLASH_Write( ( uint32_t ) assembled_flash_buffer, ( uint32_t ) flash_aligned_address, FLASH_CF_MIN_PGM_SIZE );

            if( flash_err != FLASH_SUCCESS )
            {
                nop();
            }

            while( OTA_FLASHING_IN_PROGRESS == gs_header_flashing_task )
            {
            }

            xSemaphoreGive( xSemaphoreFlashig );
            load_firmware_control_block.total_image_length += tmp->content.length;
            tmp = fragmented_flash_block_list_delete( tmp, tmp->content.offset );
        }
        while( tmp != NULL );
    }

    /* Verify an ECDSA-SHA256 signature. */
    if( CRYPTO_SignatureVerificationStart( &pvSigVerifyContext, cryptoASYMMETRIC_ALGORITHM_ECDSA,
                                           cryptoHASH_ALGORITHM_SHA256 ) == pdFALSE )
    {
        return OTA_ERR_SIGNATURE_CHECK_FAILED;
    }
    else
    {
        LogInfo( ( "Started %s signature verification, file: %s",
                   OTA_JsonFileSignatureKey, ( const char * ) C->pCertFilepath ) );
        pucSignerCert = prvPAL_ReadAndAssumeCertificate( C->pCertFilepath, &ulSignerCertSize );

        if( pucSignerCert == NULL )
        {
            eResult = OTA_ERR_BAD_SIGNER_CERT;
        }
        else
        {
            CRYPTO_SignatureVerificationUpdate( pvSigVerifyContext,
                                                ( const uint8_t * ) BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS + BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH,
                                                load_firmware_control_block.total_image_length );

            if( CRYPTO_SignatureVerificationFinal( pvSigVerifyContext, ( char * ) pucSignerCert, ulSignerCertSize,
                                                   C->pSignature->data, C->pSignature->size ) == pdFALSE )
            {
                LogError( ( "Finished %s signature verification, but signature verification failed",
                            OTA_JsonFileSignatureKey ) );
                eResult = OTA_ERR_SIGNATURE_CHECK_FAILED;
            }
            else
            {
                LogInfo( ( "PASS: Finished %s signature verification, signature verification passed",
                           OTA_JsonFileSignatureKey ) );
                eResult = OTA_ERR_NONE;
            }
        }
    }

    /* Free the signer certificate that we now own after prvPAL_ReadAndAssumeCertificate(). */
    if( pucSignerCert != NULL )
    {
        vPortFree( pucSignerCert );
    }

    return eResult;
}

static uint8_t * prvPAL_ReadAndAssumeCertificate( const uint8_t * const pucCertName,
                                                  uint32_t * const ulSignerCertSize )
{
    uint8_t * pucCertData;
    uint32_t ulCertSize;
    uint8_t * pucSignerCert = NULL;
    CK_RV xResult;

    xResult = prvGetCertificate( ( const char * ) pucCertName, &pucSignerCert, ulSignerCertSize );

    if( ( xResult == CKR_OK ) && ( pucSignerCert != NULL ) )
    {
        LogInfo( ( "Using cert with label: %s OK", ( const char * ) pucCertName ) );
    }
    else
    {
        LogWarn( ( "No such certificate file: %s. Using aws_ota_codesigner_certificate.h.",
                   ( const char * ) pucCertName ) );

        /* Allocate memory for the signer certificate plus a terminating zero so we can copy it and return to the caller. */
        ulCertSize = sizeof( signingcredentialSIGNING_CERTIFICATE_PEM );
        pucSignerCert = pvPortMalloc( ulCertSize + 1 );                       /*lint !e9029 !e9079 !e838 malloc proto requires void*. */
        pucCertData = ( uint8_t * ) signingcredentialSIGNING_CERTIFICATE_PEM; /*lint !e9005 we don't modify the cert but it could be set by PKCS11 so it's not const. */

        if( pucSignerCert != NULL )
        {
            memcpy( pucSignerCert, pucCertData, ulCertSize );
            /* The crypto code requires the terminating zero to be part of the length so add 1 to the size. */
            pucSignerCert[ ulCertSize ] = 0U;
            *ulSignerCertSize = ulCertSize + 1U;
        }
        else
        {
            LogError( ( "No memory for certificate of size %d", ulCertSize ) );
        }
    }

    return pucSignerCert;
}

OtaErr_t otaPal_ResetDevice( OtaFileContext_t * const C )
{
    ( void ) C;

    LogInfo( ( "Resetting the device." ) );

    if( ( OtaImageStateAccepted == load_firmware_control_block.eSavedAgentState ) ||
        ( OtaImageStateTesting == load_firmware_control_block.eSavedAgentState ) )
    {
        /* Software reset issued (Not swap bank) */
        set_psw( 0 );
        R_BSP_InterruptsDisable();
        R_BSP_RegisterProtectDisable( BSP_REG_PROTECT_LPC_CGC_SWR );
        SYSTEM.SWRR = 0xa501;

        while( 1 ) /* software reset */
        {
        }
    }
    else
    {
        /* If the status is rejected, aborted, or error, swap bank and return to the previous image.
         * Then the boot loader will start and erase the image that failed to update. */
        set_psw( 0 );
        R_BSP_InterruptsDisable();
        R_FLASH_Control( FLASH_CMD_BANK_TOGGLE, NULL );
        R_BSP_RegisterProtectDisable( BSP_REG_PROTECT_LPC_CGC_SWR );
        SYSTEM.SWRR = 0xa501;

        while( 1 ) /* software reset */
        {
        }
    }

    /* We shouldn't actually get here if the board supports the auto reset.
     * But, it doesn't hurt anything if we do although someone will need to
     * reset the device for the new image to boot. */
    return OTA_ERR_NONE;
}

OtaErr_t otaPal_SetPlatformImageState( OtaFileContext_t * const C,
                                       OtaImageState_t eState )
{
    flash_interrupt_config_t cb_func_info;
    OtaErr_t eResult = OTA_ERR_UNINITIALIZED;

    ( void ) C;

    LogDebug( ( "otaPal_SetPlatformImageState is called." ) );

    /* Save the image state to eSavedAgentState. */
    if( OtaImageStateTesting == load_firmware_control_block.eSavedAgentState )
    {
        switch( eState )
        {
            case OtaImageStateAccepted:
                R_FLASH_Close();
                R_FLASH_Open();
                cb_func_info.pcallback = ota_header_flashing_callback;
                cb_func_info.int_priority = FLASH_INTERRUPT_PRIORITY;
                R_FLASH_Control( FLASH_CMD_SET_BGO_CALLBACK, ( void * ) &cb_func_info );
                gs_header_flashing_task = OTA_FLASHING_IN_PROGRESS;

                if( R_FLASH_Erase( ( flash_block_address_t ) BOOT_LOADER_UPDATE_TEMPORARY_AREA_HIGH_ADDRESS, BOOT_LOADER_UPDATE_TARGET_BLOCK_NUMBER ) == FLASH_SUCCESS )
                {
                    while( OTA_FLASHING_IN_PROGRESS == gs_header_flashing_task )
                    {
                    }

                    LogInfo( ( "erase install area (code flash):OK" ) );
                    LogInfo( ( "Accepted and committed final image." ) );
                    eResult = OTA_ERR_NONE;
                }
                else
                {
                    LogError( ( "erase install area (code flash):NG" ) );
                    LogError( ( "Accepted final image but commit failed." ) );
                    eResult = OTA_ERR_COMMIT_FAILED;
                }

                break;

            case OtaImageStateRejected:
                LogWarn( ( "Rejected image." ) );
                eResult = OTA_ERR_NONE;
                break;

            case OtaImageStateAborted:
                LogWarn( ( "Aborted image." ) );
                eResult = OTA_ERR_NONE;
                break;

            case OtaImageStateTesting:
                LogInfo( ( "Testing." ) );
                eResult = OTA_ERR_NONE;
                break;

            default:
                LogError( ( "Unknown state received %d.", ( int32_t ) eState ) );
                eResult = OTA_ERR_BAD_IMAGE_STATE;
                break;
        }
    }
    else
    {
        switch( eState )
        {
            case OtaImageStateAccepted:
                LogError( ( "Not in commit pending so can not mark image valid." ) );
                eResult = OTA_ERR_COMMIT_FAILED;
                break;

            case OtaImageStateRejected:
                LogWarn( ( "Rejected image." ) );
                eResult = OTA_ERR_NONE;
                break;

            case OtaImageStateAborted:
                OLogWarn( ( "Aborted image." ) );
                eResult = OTA_ERR_NONE;
                break;

            case OtaImageStateTesting:
                LogInfo( ( "Testing." ) );
                eResult = OTA_ERR_NONE;
                break;

            default:
                LogError( ( "Unknown state received %d.", ( int32_t ) eState ) );
                eResult = OTA_ERR_BAD_IMAGE_STATE;
                break;
        }
    }

    load_firmware_control_block.eSavedAgentState = eState;

    return eResult;
}

OtaPalImageState_t otaPal_GetPlatformImageState( OtaFileContext_t * const C )
{
    OtaPalImageState_t ePalState = OtaPalImageStateUnknown;

    ( void ) C;

    LogDebug( ( "otaPal_GetPlatformImageState is called." ) );

    switch( load_firmware_control_block.eSavedAgentState )
    {
        case OtaImageStateTesting:
            ePalState = OtaPalImageStatePendingCommit;
            break;

        case OtaImageStateAccepted:
            ePalState = OtaPalImageStateValid;
            break;

        case OtaImageStateUnknown: /* Uninitialized image state, assume a factory image */
            ePalState = OtaPalImageStateValid;
            break;

        case OtaImageStateRejected:
        case OtaImageStateAborted:
        default:
            ePalState = OtaPalImageStateInvalid;
            break;
    }

    LogDebug( ( "Function call: otaPal_GetPlatformImageState: [%d]", ePalState ) );
    return ePalState; /*lint !e64 !e480 !e481 I/O calls and return type are used per design. */
}
